@@ -77,3 +77,11 @@ xmlparser.sanitize-listings=true
 # Jurisdiction Policy Files are installed.
 ###
 crypto.algorithm=PBEWithMD5AndDES
+
+###
+# DevPay Settings
+#
+# Default values for DevPay user and product tokens.
+###
+#devpay.user-token=
+#devpay.product-token=
